# python-docx

./: .gitignore  .readthedocs.yaml  HISTORY.rst  LICENSE  README.md  pyproject.toml  tox.ini
.github/actions/setup-poetry/: action.yml
.github/workflows/: pipeline.yml  release.yml
docs/: conf.py  index.rst  requirements.txt
docs/_templates/: sidebarlinks.html
docs/api/: dml.rst  document.rst  section.rst  settings.rst  shape.rst  shared.rst  style.rst  table.rst  text.rst  utility.rst
docs/api/enum/: MsoColorType.rst  MsoThemeColorIndex.rst  WdAlignParagraph.rst  WdBuiltinStyle.rst  WdCellVerticalAlignment.rst  WdLineSpacing.rst  WdOrientation.rst  WdRowAlignment.rst  WdRowHeightRule.rst  WdSectionStart.rst  WdStyleType.rst  WdTableDirection.rst
docs/dev/analysis/features/: numbering.rst
docs/dev/analysis/features/table/: table-cell.rst  table-row.rst
docs/dev/analysis/features/text/: font-color.rst  hyperlink.rst
docs/user/: documents.rst  install.rst  quickstart.rst  sections.rst  styles-using.rst  text.rst
features/steps/: api.py  block.py  coreprops.py  document.py  font.py  hdrftr.py  hyperlink.py  image.py  numbering.py  pagebreak.py  paragraph.py  parfmt.py  section.py  settings.py  shape.py  shared.py  styles.py  table.py  tabstops.py  text.py
src/docx/: __init__.py  api.py  document.py  section.py  table.py
src/docx/image/: jpeg.py
src/docx/opc/: constants.py
src/docx/oxml/: __init__.py  numbering.py  shape.py  shared.py  simpletypes.py  table.py  xmlchemy.py
src/docx/parts/: story.py
src/docx/styles/: styles.py
src/docx/text/: font.py  paragraph.py  run.py
src/docx/utility/: __init__.py  convert.jxa  to_pdf.py
src/skelmis/docx/: __init__.py  api.py  blkcntnr.py  document.py  package.py  section.py  settings.py  shape.py  shared.py  table.py  types.py
src/skelmis/docx/drawing/: __init__.py
src/skelmis/docx/enum/: dml.py  section.py  style.py  table.py  text.py
src/skelmis/docx/image/: __init__.py  image.py  jpeg.py
src/skelmis/docx/opc/: coreprops.py  oxml.py  package.py  part.py  phys_pkg.py  pkgreader.py  pkgwriter.py  rel.py  spec.py
src/skelmis/docx/opc/parts/: coreprops.py
src/skelmis/docx/oxml/: __init__.py  coreprops.py  document.py  drawing.py  numbering.py  parser.py  section.py  settings.py  shape.py  shared.py  simpletypes.py  styles.py  table.py  xmlchemy.py
src/skelmis/docx/oxml/text/: font.py  hyperlink.py  pagebreak.py  paragraph.py  parfmt.py  run.py
src/skelmis/docx/parts/: document.py  hdrftr.py  image.py  settings.py  story.py  styles.py
src/skelmis/docx/styles/: __init__.py  latent.py  style.py  styles.py
src/skelmis/docx/text/: font.py  hyperlink.py  pagebreak.py  paragraph.py  parfmt.py  run.py  tabstops.py
src/skelmis/docx/utility/: Module1.xba  __init__.py  to_pdf.py
src/skelmis/docx/utility/macros/: Module1.xba
tests/: conftest.py  test_api.py  test_blkcntnr.py  test_document.py  test_enum.py  test_package.py  test_section.py  test_settings.py  test_shape.py  test_shared.py  test_table.py  unitdata.py
tests/dml/: test_color.py
tests/image/: test_bmp.py  test_gif.py  test_helpers.py  test_image.py  test_jpeg.py  test_png.py  test_tiff.py
tests/opc/: test_coreprops.py  test_oxml.py  test_package.py  test_packuri.py  test_part.py  test_phys_pkg.py  test_pkgreader.py  test_pkgwriter.py  test_rel.py
tests/opc/parts/: test_coreprops.py
tests/opc/unitdata/: rels.py  types.py
tests/oxml/: test__init__.py  test_document.py  test_ns.py  test_section.py  test_styles.py  test_table.py  test_xmlchemy.py
tests/oxml/parts/: test_document.py
tests/oxml/text/: test_hyperlink.py  test_run.py
tests/parts/: test_document.py  test_hdrftr.py  test_image.py  test_numbering.py  test_settings.py  test_story.py  test_styles.py
tests/styles/: test_latent.py  test_style.py  test_styles.py
tests/text/: test_font.py  test_hyperlink.py  test_pagebreak.py  test_paragraph.py  test_parfmt.py  test_run.py  test_tabstops.py
tests/unitutil/: cxml.py
