[project]
name = "skelmis-docx"
version = "2.4.0"
description = "Create, read, and update Microsoft Word .docx files."
authors = [{ name = "Skelmis", email = "skelmis.craft@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = ["Docx"]
dependencies = [
    "lxml>=3.1.0",
    "typing-extensions>=4.12.2,<5",
    "pywin32==307 ; sys_platform == 'windows'",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/skelmis/python-docx"
Documentation = "https://skelmis-docx.readthedocs.io/en/latest/"
"Issue tracker" = "https://github.com/Skelmis/python-docx/issues"
Changelog = "https://github.com/Skelmis/python-docx/blob/master/HISTORY.rst"


[dependency-groups]
dev = [
    "build>=1.2.1,<2",
    "ruff>=0.11.13",
    "setuptools>=80.9.0",
    "tox>=4.18.0,<5",
    "twine>=6.1.0",
    "types-lxml>=2024.8.7",
    "behave>=1.2.6,<2",
    "pyparsing>=3.1.2,<4",
    "pytest>=8.3.2,<9",
    "pytest-coverage>=0.0,<0.1",
    "pytest-xdist>=3.6.1,<4",
    "black>=25.1.0",
]
docs = ["sphinx>=8.0.2,<9"]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[tool.hatch.build.targets.sdist]
include = ["src/skelmis/docx"]

[tool.hatch.build.targets.wheel]
include = ["src/skelmis/docx"]

[tool.hatch.build.targets.wheel.sources]
"src/skelmis/docx" = "skelmis/docx"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.pyright]
include = ["src/docx", "tests"]
pythonPlatform = "All"
pythonVersion = "3.10"
reportImportCycles = true
reportUnnecessaryCast = true
reportUnnecessaryTypeIgnoreComment = true
stubPath = "./typings"
typeCheckingMode = "strict"
verboseOutput = true

[tool.pytest.ini_options]
filterwarnings = [
    # -- exit on any warning not explicitly ignored here --
    "error",

    # -- pytest-xdist plugin may warn about `looponfailroots` deprecation --
    "ignore::DeprecationWarning:xdist",

    # -- pytest complains when pytest-xdist is not installed --
    "ignore:Unknown config option. looponfailroots:pytest.PytestConfigWarning",
]
looponfailroots = ["src", "tests"]
norecursedirs = [
    "doc",
    "docx",
    "*.egg-info",
    "features",
    ".git",
    "ref",
    "_scratch",
    ".tox",
]
python_files = ["test_*.py"]
python_classes = ["Test", "Describe"]
python_functions = ["it_", "its_", "they_", "and_", "but_"]

[tool.ruff]
exclude = []
line-length = 100
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "COM812",   # -- over-aggressively insists on trailing commas where not desired --
    "PT001",    # -- wants @pytest.fixture() instead of @pytest.fixture --
]
select = [
    "C4",       # -- flake8-comprehensions --
    "COM",      # -- flake8-commas --
    "E",        # -- pycodestyle errors --
    "F",        # -- pyflakes --
    "I",        # -- isort (imports) --
    "PLR0402",  # -- Name compared with itself like `foo == foo` --
    "PT",       # -- flake8-pytest-style --
    "SIM",      # -- flake8-simplify --
    "UP015",    # -- redundant `open()` mode parameter (like "r" is default) --
    "UP018",    # -- Unnecessary {literal_type} call like `str("abc")`. (rewrite as a literal) --
    "UP032",    # -- Use f-string instead of `.format()` call --
    "UP034",    # -- Avoid extraneous parentheses --
]

[tool.ruff.lint.isort]
known-first-party = ["docx"]
known-local-folder = ["helpers"]
